--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -2,40 +2,11 @@
 ##      COLOR SCHEMES       ##
 ##############################
 schemes:
-  ### Doom One ###
-  DoomOne: &DoomOne
-    primary:
-      background: '#282c34'
-      foreground: '#bbc2cf'
-    cursor:
-      text: CellBackground
-      cursor: '#528bff'
-    selection:
-      text: CellForeground
-      background: '#3e4451'
-    normal:
-      black:   '#1c1f24'
-      red:     '#ff6c6b'
-      green:   '#98be65'
-      yellow:  '#da8548'
-      blue:    '#51afef'
-      magenta: '#c678dd'
-      cyan:    '#5699af'
-      white:   '#202328'
-    bright:
-      black:   '#5b6268'
-      red:     '#da8548'
-      green:   '#4db5bd'
-      yellow:  '#ecbe7b'
-      blue:    '#3071db'
-      magenta: '#a9a1e1'
-      cyan:    '#46d9ff'
-      white:   '#dfdfdf'
-
   ### Dracula ###
   Dracula: &Dracula
     primary:
       background: '#282a36'
+        #background: '#151515'
       foreground: '#f8f8f2'
     cursor:
       text: CellBackground
@@ -93,6 +64,7 @@ schemes:
     primary:
       # hard contrast: background = '0x1d2021'
       background: '#282828'
+      #background: '#151515'
       # soft contrast: background = '0x32302f'
       foreground: '#ebdbb2'
 
@@ -123,6 +95,7 @@ schemes:
     # Default colors
     primary:
       background: '#2D2A2E'
+      #background: '#151515'
       foreground: '#FCFCFA'
 
     # Normal colors
@@ -152,6 +125,7 @@ schemes:
     # Default colors
     primary:
       background: '#2E3440'
+      #background: '#151515'
       foreground: '#D8DEE9'
 
     # Normal colors
@@ -176,75 +150,13 @@ schemes:
       cyan:    '#8FBCBB'
       white:   '#ECEFF4'
 
-  ### Oceanic Next ###
-  OceanicNext: &OceanicNext
-    # Default colors
-    primary:
-      background: '#1b2b34'
-      foreground: '#d8dee9'
-
-    # Colors the cursor will use if `custom_cursor_colors` is true
-    cursor:
-      text: '#1b2b34'
-      cursor: '#ffffff'
-
-    # Normal colors
-    normal:
-      black:   '#343d46'
-      red:     '#EC5f67'
-      green:   '#99C794'
-      yellow:  '#FAC863'
-      blue:    '#6699cc'
-      magenta: '#c594c5'
-      cyan:    '#5fb3b3'
-      white:   '#d8dee9'
-
-    # Bright colors
-    bright:
-      black:   '#343d46'
-      red:     '#EC5f67'
-      green:   '#99C794'
-      yellow:  '#FAC863'
-      blue:    '#6699cc'
-      magenta: '#c594c5'
-      cyan:    '#5fb3b3'
-      white:   '#d8dee9'
-
-  ### Palenight ###
-  Palenight: &Palenight
-    # Default colors
-    primary:
-      background: '#292d3e'
-      foreground: '#d0d0d0'
-
-    # Normal colors
-    normal:
-      black:   '#292d3e'
-      red:     '#f07178'
-      green:   '#c3e88d'
-      yellow:  '#ffcb6b'
-      blue:    '#82aaff'
-      magenta: '#c792ea'
-      cyan:    '#89ddff'
-      white:   '#d0d0d0'
-
-    # Bright colors
-    bright:
-      black:   '#434758'
-      red:     '#ff8b92'
-      green:   '#ddffa7'
-      yellow:  '#ffe585'
-      blue:    '#9cc4ff'
-      magenta: '#e1acff'
-      cyan:    '#a3f7ff'
-      white:   '#ffffff'
-
   ### Solarized Dark ###
   SolarizedDark: &SolarizedDark
     # Default colors
     primary:
-      background: '#002b36' # base03
-      foreground: '#839496' # base0
+      background: '#002b36'
+      #background: '#151515'
+      foreground: '#839496'
 
     # Cursor colors
     cursor:
@@ -273,88 +185,46 @@ schemes:
       cyan:    '#93a1a1' # base1
       white:   '#fdf6e3' # base3
 
-  ### Solarized Light ###
-  SolarizedLight: &SolarizedLight
+  ### Material Ocean ###
+  MaterialOcean: &MaterialOcean
     # Default colors
     primary:
-      background: '#fdf6e3' # base3
-      foreground: '#657b83' # base00
-
-    # Cursor colors
-    cursor:
-      text:   '#fdf6e3' # base3
-      cursor: '#657b83' # base00
+      background: '#0f101a'
+      foreground: '#dbdbdb'
 
     # Normal colors
     normal:
-      black:   '#073642' # base02
-      red:     '#dc322f' # red
-      green:   '#859900' # green
-      yellow:  '#b58900' # yellow
-      blue:    '#268bd2' # blue
-      magenta: '#d33682' # magenta
-      cyan:    '#2aa198' # cyan
-      white:   '#eee8d5' # base2
+      black:   '#0f101a'
+      red:     '#f07178'
+      green:   '#c3e88d'
+      yellow:  '#ffcb6b'
+      blue:    '#82aaff'
+      magenta: '#c792ea'
+      cyan:    '#89ddff'
+      white:   '#eeffff'
 
     # Bright colors
     bright:
-      black:   '#002b36' # base03
-      red:     '#cb4b16' # orange
-      green:   '#586e75' # base01
-      yellow:  '#657b83' # base00
-      blue:    '#839496' # base0
-      magenta: '#6c71c4' # violet
-      cyan:    '#93a1a1' # base1
-      white:   '#fdf6e3' # base3
+      black:   '#0f101a'
+      red:     '#ff0718'
+      green:   '#c3e88d'
+      yellow:  '#ffcb6b'
+      blue:    '#80cbc4'
+      magenta: '#c792ea'
+      cyan:    '#89ddff'
+      white:   '#eeffff'
 
-  ### Tomorrow Night ###
-  TomorrowNight: &TomorrowNight
-     # Default colors
-    primary:
-      background: '#1d1f21'
-      foreground: '#c5c8c6'
-
-    # Colors the cursor will use if `custom_cursor_colors` is true
-    cursor:
-      text: '#1d1f21'
-      cursor: '#ffffff'
-
-    # Normal colors
-    normal:
-      black:   '#1d1f21'
-      red:     '#cc6666'
-      green:   '#b5bd68'
-      yellow:  '#e6c547'
-      blue:    '#81a2be'
-      magenta: '#b294bb'
-      cyan:    '#70c0ba'
-      white:   '#373b41'
-
-    # Bright colors
-    bright:
-      black:   '#666666'
-      red:     '#ff3334'
-      green:   '#9ec400'
-      yellow:  '#f0c674'
-      blue:    '#81a2be'
-      magenta: '#b77ee0'
-      cyan:    '#54ced6'
-      white:   '#282a2e'
 
 ######################################################################
 ## SET THEME: Choose ONE color scheme from those in the above list. ##
 ## ###################################################################
 # Available themes are:
-# *DoomOne
 # *Dracula
 # *GruvboxDark
 # *MonokaiPro
 # *Nord
-# *OceanicNext
-# *Palenight
-# *SolarizedLight
 # *SolarizedDark
-# *TomorrowNight
+# *MaterialOcean
 
 colors: *GruvboxDark
 
@@ -362,13 +232,13 @@ colors: *GruvboxDark
 
 font:
   bold:
-    family: UbuntuMono Nerd Font
+    family: JetBrains Mono Nerd Font
   italic:
-    family: UbuntuMono Nerd Font
+    family: JetBrains Mono Nerd Font
   normal:
-    family: UbuntuMono Nerd Font
+    family: JetBrains Mono Nerd Font
     style: Regular
-  size: 12
+  size: 10
 
 ### CURSOR ###
 
@@ -386,5 +256,6 @@ live_config_reload: true
 
 window:
   padding:
+    y: 2
     x: 2
   opacity: 0.90
