--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,17 +15,17 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-# corner-radius = 10.0;
+#corner-radius = 10.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
   "class_g = 'kitty'",
-  "class_g = 'Alacritty'",
+  #"class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
-  #"class_g = 'TelegramDesktop'",
+  "class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
   "class_g = 'Thunderbird'"
 ];
@@ -43,15 +43,15 @@ round-borders-exclude = [
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
-shadow = false;
+shadow = false
+# shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
 shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+# shadow-opacity = .6
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -59,7 +59,7 @@ shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -3;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -261,8 +261,8 @@ blur: {
   method = "kawase";
   #method = "kernel";
   strength = 2;
-  # deviation = 1.0;
-  # kernel = "11x11gaussian";
+  #deviation = 1.0;
+  #kernel = "11x11gaussian";
   background = false;
   background-frame = false;
   background-fixed = false;
@@ -402,7 +402,7 @@ detect-client-leader = true
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+glx-no-rebind-pixmap = false
 
 # Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
@@ -410,7 +410,7 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-#use-damage = true (Causing Weird Black semi opaque rectangles when terminal is opened)
+# use-damage = true (Causing Weird Black semi opaque rectangles when terminal is opened)
 #Changing use-damage to false fixes the problem
 use-damage = false
 
@@ -434,7 +434,7 @@ use-damage = false
 # Do not use EWMH to detect fullscreen windows. 
 # Reverts to checking if a window is fullscreen based only on its size and coordinates.
 #
-# no-ewmh-fullscreen = false
+# no-ewmh-fullscreen = true
 
 # Dimming bright windows so their brightness doesn't exceed this set value. 
 # Brightness of a window is estimated by averaging all pixels in the window, 
@@ -504,7 +504,7 @@ log-level = "info";
 wintypes:
 {
   normal = { fade = true; shadow = true; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1.0; }
